--- a/views/services/blockchain-development.ejs
+++ b/views/services/blockchain-development.ejs
@@ -90,11 +90,11 @@
             </div>
         </div> <!-- Quote -->
         <div class="container">
-            <h2>定制化的区块链开发</h2>
+            <h2>区块链定制开发</h2>
             <div class="gor-100 clearfix">
                 <div>
-                    <div class="h4">帮助企事业单位规划应用程序的功能、设计Token、开发部署。</div>
-                    <div class="h4">帮助合作伙伴从众多行业领先的区块链底层系统（比特股，EOS，超级账本和以太坊等）中选择出最合适您的系统。
+                    <div class="h4">我们的开发团队帮助您构建基于区块链技术的应用程序，并且根据您的需求为您设计该程序的功能。</div>
+                    <div class="h4">我们帮助合作伙伴从众多行业领先的区块链底层系统（比特股，EOS，超级账本和以太坊等）中选择出最合适您的系统。
                     </div>
                 </div>
             </div>
@@ -112,8 +112,8 @@
                     <div class="col-md-4">
 
                         <div class="point point-accordion">
-                            <h3>通信权限认证</h3>
-                            <div class="text">通信智能授权，并永久记录在账本上。</div>
+                            <h3>数据交换授权</h3>
+                            <div class="text">数据交换智能授权，并永久记录在账本上。</div>
                         </div>
                     </div>
                     <div class="col-md-4 dn768">
@@ -126,33 +126,33 @@
                     </div>
                     <div class="col-md-4">
                         <div class="point point-accordion">
-                            <h3>智能合约</h3>
+                            <h3>智能合约和智能钱包</h3>
                             <div class="text">
-                                <p>定时自动执行的合约或者通过某个时间点，或者是发生的某一件事去触发该合约。</p>
+                                <p>自动执行的合约，通过时间或者事件触发的方便且快捷的钱包支付</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="point point-accordion">
-                            <h3>去中心化身份验证</h3>
+                            <h3>安全身份验证</h3>
                             <div class="text">
-                                <p>安全的去中心化的自动识别和权限认证。</p>
+                                <p>去中心化网络的自动身份识别和权限认证。</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="point point-accordion">
-                            <h3>去中心化存储</h3>
+                            <h3>安全分布式存储</h3>
                             <div class="text">
-                                <p>安全地存储文件并快速的访问，通过去中心化的身份认证可以设置访问者是否有权限访问该文件。</p>
+                                <p>安全地存储您的数字资产且快速的访问，通过去中心化的身份认证设置访问者对该数字资产的访问权限。</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="point point-accordion">
-                            <h3>跨境企业转账</h3>
+                            <h3>跨境业务的付款和转账</h3>
                             <div class="text">
-                                <p>简单、快速、低成本地跨货币和跨国界付款和收款。</p>
+                                <p>简单、快速、低成本地跨货币和跨国界的付款和收款。</p>
                             </div>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                         <div class="point point-accordion">
                             <h3>网络攻击预防</h3>
                             <div class="text">
-                                <p>去中心化的区块链技术使传统黑客束手无措。</p>
+                                <p>去中心化的区块链技术使传统的攻击方式变得不再可能，同时也防止了蜜罐攻击。</p>
                             </div>
                         </div>
                     </div>
@@ -168,7 +168,7 @@
                         <div class="point point-accordion">
                             <h3>符合GDPR和SOX</h3>
                             <div class="text">
-                                <p>为敏感的数据和行为提供可验证的安全的监管链。</p>
+                                <p>为敏感的数据和行为提供可验证且安全的监管。</p>
                             </div>
                         </div>
                     </div>
@@ -265,11 +265,11 @@
         <div class="container mt-60px solutions-tools">
             <div class="row">
                 <div class="col-md-6">
-                    <h2 class="h1 color-h2 m-0 p-0">工作流程</h2>
+                    <h2 class="h1 color-h2 m-0 p-0">服务流程</h2>
                 </div>
                 <div class="col-md-6">
-                    <p>成功的定制区块链项目需要独特的技能和程序。我们使用精心设计的区块链开发流程以及敏捷方法，使您的项目完全按照您的业务要求实现。</p>
-                    <p>OOpenLedger内部团队的经理，研究人员，建筑师，开发商，质量保证专家和其他专业人员将在以下阶段启动，设计，规划和交付定制的区块链解决方案：</p>
+                    <p>成功的定制区块链项目需要良好的技能和流程的把控。我们使用精心设计的区块链开发流程，结合敏捷开发流程，让您的项目完全按照您的业务要求实现。</p>
+                    <p>OpenLedger内部团队包括产品经理、需求分析人员、架构师、开发人员、质量保证专家和其他专业人士，他们将在下面介绍的阶段中启动、设计、规划并交付一个定制的区块链解决方案：</p>
                 </div>
             </div>
         </div>
@@ -282,17 +282,17 @@
                                 <h3 class="h2">
                                     <span>1 <span>/</span></span>项目调研和规划</h3>
                                 <p class="mt-10px">
-                                    调研的阶段可能比开发阶段需要更多的时间，因为我们必须确保能够准确地知道您的问题和需求，并设计出一种完美的解决方案来。
+                                    调研的阶段可能比开发阶段需要更多的时间，因为我们必须确保能够准确地理解您的问题和需求，并设计出一种完美的满足您需求的解决方案。
                                 </p>
                             </div>
                             <div class="col-md-6">
                                 <ul>
-                                    <li>收集需求，分析业务</li>
-                                    <li>分析找出面临的问题</li>
-                                    <li>进行报价和计算完工时间</li>
-                                    <li>找出项目中的障碍点和风险</li>
+                                    <li>收集需求</li>
+                                    <li>分析业务需求和问题</li>
+                                    <li>进行报价和计算时间周期</li>
+                                    <li>找出障碍点和风险</li>
                                     <li>制定策略和规划</li>
-                                    <li>制作原型图</li>
+                                    <li>制作原型</li>
                                 </ul>
                             </div>
                         </div>
@@ -309,7 +309,7 @@
                                 <h3 class="h2">
                                     <span>2 <span>/</span></span>开发阶段</h3>
                                 <p class="mt-10px">
-                                        此阶段我们以敏捷开发作为核心，每天进行站立会议每周进行团队会议，项目经理全天候24小时跟踪项目的进度，并定期向您汇报，让您了解项目最新的情况。
+                                        此阶段我们以敏捷开发流程作为核心，每天进行站立会议每周进行团队会议，项目经理全天候24小时跟踪项目的进度，并定期向您汇报，让您了解项目最新的情况。
                                 </p>
                             </div>
                             <div class="col-md-6">
@@ -333,11 +333,12 @@
                             <div class="col-md-6">
                                 <h3 class="h2">
                                     <span>3 <span>/</span></span>支持</h3>
-                                <p class="mt-10px">随着您的公司发展日益壮大，您的区块链解决方案也需要与时俱进。我们将会持续的提供支持以及新的功能，方案的改进和对现有功能的升级。</p>
+                                <p class="mt-10px">随着您的公司发展日益壮大，您的区块链解决方案也需要跟上它的业务发展需要。我们提供持续的技术支持，以及对现有的功能进行改进和升级并根据情况而定增加新的特性。</p>
                             </div>
                             <div class="col-md-6">
                                 <ul>
-                                    <li>技术支持和解决方案的改进</li>
+                                    <li>支持和维护解决方案</li>
+                                    <li>对解决方案的改进进行分析和研究</li>
                                 </ul>
                             </div>
                         </div>
@@ -347,8 +348,6 @@
         </div>
         <!-- Our Process -->
     </div>
-
-
     <!-- Common Footer -->
     <% include ../common/footer.ejs %>
                         <!-- Common Footer End -->
