--- a/views/solutions/ito.ejs
+++ b/views/solutions/ito.ejs
@@ -45,7 +45,7 @@
                         <br>
 
                     </div>
-                    <a href="#contact" class="link">Let's Talk</a>
+                    <a href="#contact" class="link">联系我们</a>
                     <div class="bg"></div>
                 </div>
 
@@ -61,9 +61,10 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="puffy">
-                            <h3 class="h5">IoT gathers massive amounts of data to inform new business decisions.</h3>
-                            <p>Blockchain automates security and auditability, delivering verifiable, secure and
-                                permanent data storage. Together, they make data usable, accessible and safe.</p>
+                            <h3 class="h5">物联网往往需要收集大量数据通过计算做出最佳的选择。</h3>
+                            <p>
+                                区块链使这些数据的安全性得到大大的提升并且让需要审计的数据自动化，这些数据都是可验证且不可篡改的并且能够永久的保存。它们的结合使这些数据变得可用、可信赖。
+                            </p>
                         </div>
                     </div>
                     <div class="col-md-8 iot-gathers-massive-img-points">
@@ -71,8 +72,8 @@
                             <div class="col-md-6">
                                 <div class="iot-gathers-massive-img-point">
                                     <div class="iot-gathers-massive-img iot-gathers-massive-img01"></div>
-                                    <p>By 2019, <strong>20% of all IoT devices</strong> will be built on blockchain
-                                        technology. <a class="teal-link"
+                                    <p>截止2019年，全球一共有20%的物联网设备是基于区块链技术
+                                        <a class="teal-link"
                                             href="https://www.idc.com/research/viewtoc.jsp?containerId=US40755816"
                                             target="_blank" rel="noopener">Source</a></p>
                                 </div>
@@ -80,8 +81,8 @@
                             <div class="col-md-6">
                                 <div class="iot-gathers-massive-img-point">
                                     <div class="iot-gathers-massive-img iot-gathers-massive-img02"></div>
-                                    <p>The number of IoT devices worldwide will change from about 27B in 2017 to
-                                        <strong>125B in 2030.</strong> <a class="teal-link"
+                                    <p>全球物联网设备的数量将从2017年的270亿增长至2030年的1250亿
+                                        <a class="teal-link"
                                             href="https://technology.ihs.com/596542/number-of-connected-iot-devices-will-surge-to-125-billion-by-2030-ihs-markit-says"
                                             target="_blank" rel="noopener">Source</a></p>
                                 </div>
@@ -96,7 +97,7 @@
 
         <div class="how-we-bring">
             <div class="container">
-                <h2>How we bring <br>blockchain to IoT</h2>
+                <h2>我们如何将区块链技术和物联网结合</h2>
                 <div class="gor-100">
                     <div class="h4">
                         Businesses face numerous challenges in IoT adoption due to gaps in security and integrity of
@@ -117,10 +118,10 @@
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>Object identity authentication & provenance</h3>
+                                <h3>数字身份认证和来源</h3>
                                 <div class="text">
-                                    <p>Data transparency and end-to-end process tracking is achieved with robust
-                                        blockchain verification mechanisms and traceable digital identity management.
+                                    <p>
+                                        通过区块链强大的验证机制和可追溯的数字身份管理，可以实现数据的透明、点到点的跟踪。
                                     </p>
                                 </div>
                             </div>
