翻译和新增石墨烯和比特股

--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -57,11 +57,11 @@
                                         <a title="Blockchain development" href="/services/blockchain-development"
                                             itemprop="url" class="dropdown-item depth-1">区块链开发<span></span></a>
                                         <ul class="sub-menu">
-                                            <!-- <li id="menu-item-1220" itemprop="name"
+                                            <li id="menu-item-1220" itemprop="name"
                                                 class="menu-item menu-item-type-post_type menu-item-object-services menu-item-1220">
                                                 <a
-                                                    href="/services/blockchain-development/bitshares-graphene/">石墨烯和比特股<span></span></a>
-                                            </li> -->
+                                                    href="/services/graphene-bitshares">石墨烯和比特股<span></span></a>
+                                            </li>
                                             <li id="menu-item-1219" itemprop="name"
                                                 class="menu-item menu-item-type-post_type menu-item-object-services menu-item-1219">
                                                 <a href="/services/hyperledger">超级账本<span></span></a>
