--- a/views/services/hyperledger.ejs
+++ b/views/services/hyperledger.ejs
@@ -40,7 +40,7 @@
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
                     <h1>超级账本开发服务</h1>
-                    <div class="h2-banner h2-banner-indents">帮助您搭建一个企业生态系统，通过超级账本可以保证该生态系统内的业务透明，不可篡改，可审批。</div>
+                    <div class="h2-banner h2-banner-indents">我们为您搭建一个先进的企业生态系统，通过超级账本可以保证该生态系统内的业务透明，不可篡改，可审计，可监督。</div>
                     <a href="#contact" class="link">现在联系</a>
                     <div class="bg"></div>
                 </div>
@@ -50,8 +50,8 @@
     <div class="content">
         <div class="container">
             <div class="why-graphene-content">
-                <h2>通过超级账本给您的业务带来哪些优势</h2>
-                <div class="h4 gor-100">超级账本 通过在网络中的每笔交易实现信任、透明、公平公正。防止个人不作为，通过精准的问责制度来提高您的业务。</div>
+                <h2>通过超级账本可以给您的业务带来哪些优势</h2>
+                <div class="h4 gor-100">超级账本通过在网络中的每一次事务的处理实现信任、透明、公平公正。通过精准的问责制度来提高您业务的效率。</div>
                 <div class="gor-100">
                     <div class="row advisory-icons hyperledger-icons">
                         <div class="col-lg-4 df mw-300">
@@ -60,11 +60,11 @@
                         </div>
                         <div class="col-lg-4 df mw-300">
                             <div class="ico ico-2"></div>
-                            <h3>需要许可才能加入</h3>
+                            <h3>权限许可的网络</h3>
                         </div>
                         <div class="col-lg-4 df mw-300">
                             <div class="ico ico-3"></div>
-                            <h3>交易保密</h3>
+                            <h3>可信任的交易</h3>
                         </div>
                     </div>
                 </div>
@@ -72,7 +72,6 @@
             <div class="grey-line"></div>
             <div class="business-gains">
                 <div class="row business-gains-row">
-
                     <div class="col-md-6">
                         <div class="business-gain-point">
                             <div class="business-gain-point-icon"></div>
@@ -80,16 +79,15 @@
                                 <h3 class="across-toggle">金融</h3>
                                 <ul class="across-sub-menu">
                                     <li>即时结算</li>
-                                    <li>简化付款处理</li>
-                                    <li>改善资本优化</li>
+                                    <li>简化支付过程</li>
+                                    <li>改善资金优化</li>
                                     <li>消除了错误处理和协调</li>
-                                    <li>降低交易对手风险</li>
+                                    <li>降低交易方风险</li>
                                     <li>高级法规报告</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-
                     <div class="col-md-6">
                         <div class="business-gain-point">
                             <div class="business-gain-point-icon"></div>
@@ -98,7 +96,7 @@
                                 <ul class="across-sub-menu">
                                     <li>改进的多方合同</li>
                                     <li>减少周转时间</li>
-                                    <li>简化风险合同效率</li>
+                                    <li>改进的风险合同效率</li>
                                     <li>改善KYC合规性</li>
                                     <li>减少身份盗用风险</li>
                                     <li>先进的预防欺诈</li>
@@ -106,24 +104,22 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="col-md-6">
                         <div class="business-gain-point">
                             <div class="business-gain-point-icon"></div>
                             <div class="business-gain-point-info">
                                 <h3 class="across-toggle">媒体</h3>
                                 <ul class="across-sub-menu">
-                                    <li>作者管理的内容权利</li>
-                                    <li>透明且可获利的C2C / P2P内容共享</li>
-                                    <li>付费内容订阅不受国家或地区限制</li>
-                                    <li>特许权使用费的近实时分配</li>
-                                    <li>改善反盗版和版权侵权措施</li>
+                                    <li>作者自管理的内容权利</li>
+                                    <li>透明且货币化的C2C/P2P内容共享</li>
+                                    <li>不受国家或地区限制的付费内容订阅</li>
+                                    <li>近实时的许可使用费分配</li>
+                                    <li>改进的反盗版和版权侵权措施</li>
                                     <li>减少广告欺诈</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-
                     <div class="col-md-6">
                         <div class="business-gain-point">
                             <div class="business-gain-point-icon"></div>
@@ -131,11 +127,11 @@
                                 <h3 class="across-toggle">卫生保健</h3>
                                 <ul class="across-sub-menu">
                                     <li>可追溯的药品和医疗供应链</li>
-                                    <li>纵向和纵向患者健康记录</li>
+                                    <li>单向和纵向的患者健康记录</li>
                                     <li>可互操作的电子病历</li>
-                                    <li>简化帐单</li>
+                                    <li>简化的帐单</li>
                                     <li>提供者，保险公司和付款人之间安全的健康信息交换</li>
-                                    <li>便利索赔裁决</li>
+                                    <li>便利的索赔裁决</li>
                                 </ul>
                             </div>
                         </div>
@@ -165,7 +161,8 @@
             <div class="enhance-business-content">
                 <h2>超级账本开发框架</h2>
                 <div class="gor-100">
-                    <div class="h4">我们可以根据您的业务目标，预期的网络复杂性和交易类型选择更广泛或更专业的Hyperledger区块链框架。如果您需要世界上最好的东西-我们将把它们结合起来。</div>
+                    <div class="h4">我们可以根据您的业务目标，预期的网络复杂性和事务类型选择更广泛或更专业的超级账本(Hyperledger)框架。
+                    </div>
                 </div>
                 <div
                     class="row tiles-lable hyperledger-tiles-lable dev01-tiles-lable tiles-lable-collapse point-list-accordion-plus">
@@ -179,29 +176,29 @@
 
                     <div class="col-md-6 col-lg-4 dev-tile-icon">
                         <div class="tile tile-collapse point-accordion-plus">
-                            <h3>使用Hyperledger Fabric的基本网络画布</h3>
+                            <h3>Hyperledger Fabric</h3>
                             <div class="text">
                                 <p>Fabric框架具有模块化，可配置和可扩展的体系结构，是安全企业级环境的坚实基础。</p>
-                                <p>使用Fabric的可定制共识协议和重新发明的Hyperledger智能合约，我们将为您当前的环境建立一个许可的区块链网络，并在您的业务环境发展时对其进行定制</p>
+                                <p>使用Fabric的可定制共识协议和重新发明的Hyperledger智能合约，我们将为您当前的环境建立一个有权限许可的区块链网络，并随着在您业务的发展对其进行定制。</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-md-6 col-lg-4 dev-tile-icon">
                         <div class="tile tile-collapse point-accordion-plus">
-                            <h3>通过Hyperledger锯齿增加了工艺灵活性</h3>
+                            <h3>Hyperledger Sawtooth</h3>
                             <div class="text">
-                                <p>Sawtooth框架支持创建和运行分布式分类帐，可插入共识协议以及省时的并行事务执行算法。</p>
-                                <p>借助Sawtooth，我们可以创建具有优先级数据可追溯性的灵活的多用途区块链网络或应用程序，从而使您能够即时交换共识协议，并同时处理并行流中的不同事务。</p>
+                                <p>Sawtooth框架支持创建和运行分布式账本，并且具备可插拔共识算法和事务处理算法的灵活性。</p>
+                                <p>通过Sawtooth框架，我们可以创建具有数据优先级、可追溯的多用途区块链网络或应用程序，从而使您能够即时交换共识协议，并同时处理并行流中不同的事务。</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-md-6 col-lg-4 dev-tile-icon">
                         <div class="tile tile-collapse point-accordion-plus">
-                            <h3>Hyperledger Iroha 简化了资产管理</h3>
+                            <h3>Hyperledger Iroha</h3>
                             <div class="text">
-                                <p>Iroha是一个专为移动使用而设计的框架，非常适合金融交易和身份验证。它的重点缩小，可以实现基于角色的访问，独特的高性能共识协议以及内置的资产和帐户管理命令。</p>
+                                <p>Iroha是一个专为移动应用而设计的框架，非常适合金融交易和身份验证。它聚焦于支持基于角色的访问、独特的高性能共识协议和内置的资产和帐户管理命令等方面。</p>
                                 <p>我们将使用Iroha来提供经过许可的区块链网络和应用程序，从而增强用户错误保护，并简化用于创建帐户，处理ID和交换资产的流程。</p>
                             </div>
                         </div>
@@ -209,22 +206,25 @@
 
                     <div class="col-md-6 col-lg-4 dev-tile-icon">
                         <div class="tile tile-collapse point-accordion-plus">
-                            <h3>与Hyperledger Burrow签订的广泛EVM合同</h3>
+                            <h3>Hyperledger Burrow</h3>
                             <div class="text">
-                                <p>Hyperledger
-                                    Burrow专注于以太坊，不是高度模块化或可插入的。该框架没有提供广泛的自定义选项，而是专注于运行和改进具有高事务吞吐量共识协议的以太坊虚拟机（EVM）智能合约。
+                                <p>
+                                    Hyperledger
+                                    Burrow专注于以太坊，它不是高度模块化或可插拔的。该框架没有提供广泛的自定义选项，而是专注于运行和改进具有高事务吞吐量共识协议的以太坊虚拟机（EVM）智能合约。
                                 </p>
-                                <p>我们将单独使用Burrow或与其他Hyperledger框架一起使用，以创建具有扩展EVM功能的许可区块链网络。</p>
+                                <p>
+                                    我们将单独使用Burrow或与其他Hyperledger框架一起创建具有扩展EVM功能的许可区块链网络。
+                                </p>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-md-6 col-lg-4 dev-tile-icon">
                         <div class="tile tile-collapse point-accordion-plus">
-                            <h3>Hyperledger Indy的防篡改数字身份</h3>
+                            <h3>Hyperledger Indy</h3>
                             <div class="text">
                                 <p>Hyperledger
-                                    Indy是利用分散身份的多功能框架。我们使用Indy根据保护隐私的规范和设计模式来创建安全的数字身份，使它们在各个域，应用程序，区块链和其他分布式分类帐之间可以互操作。
+                                    Indy是实现去中心化身份标识的通用框架。我们使用Indy根据保护隐私的规范和设计模式来创建安全的数字身份，使它们在各个域，应用程序，区块链和其他分布式账本之间可以互相操作。
                                 </p>
                             </div>
                         </div>
