--- a/views/services/smart-contract.ejs
+++ b/views/services/smart-contract.ejs
@@ -385,7 +385,7 @@
                             <div class="row bold-list">
                                 <ul>
                                     <li>更复杂的协议</li>
-                                    <li>多重签名交易</li>
+                                    <li>事务多重签名</li>
                                     <li>交易费用低</li>
                                 </ul>
                             </div>
