--- a/views/solutions/ito.ejs
+++ b/views/solutions/ito.ejs
@@ -97,7 +97,7 @@
 
         <div class="how-we-bring">
             <div class="container">
-                <h2>我们如何将区块链技术和物联网结合</h2>
+                <h2>我们是如何将区块链技术和物联网结合</h2>
                 <div class="gor-100">
                     <div class="h4">
                         Businesses face numerous challenges in IoT adoption due to gaps in security and integrity of
@@ -140,7 +140,7 @@
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>Data exchange</h3>
+                                <h3>数据交换</h3>
                                 <div class="text">
                                     <p>IoT-driven data streams are shared in real time across the network within the
                                         decentralized blockchain. Each record becomes immutable and visible to all the
@@ -151,7 +151,7 @@
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>IoT data analytics</h3>
+                                <h3>物联网数据分析</h3>
                                 <div class="text">
                                     <p>Blockchain unlocks an opportunity for detailed predictive analysis of data
                                         gathered from connected services and devices, recording metadata and creating an
