--- a/views/solutions/supply-chain.ejs
+++ b/views/solutions/supply-chain.ejs
@@ -250,7 +250,7 @@
                             <h3>端到端可追溯性</h3>
                             <div class="text">
                                 <p>
-                                    区块链可以跟踪每个账户资产的来源，财产。识别欺诈、盗窃和恶意破坏，并可采取一系列有效的措施防止交易失败的发生
+                                    区块链可以跟踪每个账户资产的来源，财产。识别欺诈、盗窃和恶意破坏，并可采取一系列有效的措施防止发生事务失败
                                 </p>
                             </div>
                         </div>
@@ -342,7 +342,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
-                            <h3>公平的交易</h3>
+                            <h3>公平的事务流转</h3>
                             <div class="text">
                                 基于区块链技术可以验证资产的来源、制造商、材料等。公司减少了假冒伪劣商品，并且这些都是可证明的，以此来推动持续化和诚信贸易
                             </div>
