--- a/views/services/index.ejs
+++ b/views/services/index.ejs
@@ -39,9 +39,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
-                    <h1>使用区块链<br>让您的业务处理更加效率</h1>
-                    <!-- <div class="h2-banner">OpenLedger delivers blockchain software services to companies in multiple
-                        industries across the globe.</div> -->
+                    <h1>区块链技术服务<br>的业务需求量与日俱增</h1>
+                    <div class="h2-banner">OpenLedger为处于不同行业的公司提供区块链技术服务</div>
                     <a href="#contact" class="link">获取报价</a>
                     <div class="bg"></div>
                 </div>
@@ -54,23 +53,23 @@
             <div class="gor-100">
                 <div class="h4">
                     <div>
-                        <div>现代企业的需求与先进的区块链技术的特点契合度非常高。</div>
+                        <div>我们专注于用先进的区块链技术实现现代企业的业务需求。</div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xl-6">
-                        <h3 class="h6 mt-40 we-believe-title">我们始终相信</h3>
+                        <h3 class="h6 mt-40 we-believe-title">我们相信</h3>
                         <div class="text">
                             <div>
-                                <div>区块链将成为跨地域、市场和各行业新的业务解决方案。</div>
+                                <div>区块链技术将成为跨地区、市场和业务领域的新的解决方案，在未来将会成为服务和项目的基础设施。</div>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-6">
-                        <h3 class="h6 mt-40 we-believe-title">我们能够</h3>
+                        <h3 class="h6 mt-40 we-believe-title">我们正在助力</h3>
                         <div class="text">
                             <div>
-                                <div>通过区块链技术与各行业进行深度合作，使用专业的技术使项目落地。为您的企业提高办事效率、调动员工积极性、增加收入。</div>
+                                <div>区块链技术与不同行业进行深度的结合，并且使用专业的技术使项目落地。为您的企业提高办事效率、减少成本、提高收入。</div>
                             </div>
                         </div>
                     </div>
@@ -84,12 +83,12 @@
             <div class="gor-100">
                 <div class="row">
                     <div class="col-lg-5">
-                        <h3 class="black-desc">定制区块链开发</h3>
+                        <h3 class="black-desc">定制化区块链开发</h3>
                     </div>
                     <div class="col-lg-7">
                         <div class="row">
                             <div class="col-lg-6">
-                                <p>我们提供安全的去中心化且定制的区块链开发服务和解决方案，帮助您实现您的想法。</p>
+                                <p>我们提供安全的、去中心化的区块链技术服务和解决方案，帮助您的行业成功转型。</p>
                             </div>
                             <div class="col-lg-6">
                                 <a href="/services/blockchain-development/" class="link">了解更多</a>
@@ -103,65 +102,39 @@
 
                     <div class="col-md-6">
                         <div class="tile">
-                            <h3>超级账本开发服务</h3>
-                            <div class="text">超级账本在网络中的每笔交易中实现信任、透明和问责来提升您业务的效率。<a class="teal-link"
-                                    href="/services/blockchain-development/hyperledger/">学到更多</a></div>
+                            <h3>超级帐本(Hyperledger)开发服务</h3>
+                            <div class="text">通过超级账本，可以实现在您网络中发起的每一个事务之间建立信任、透明度和问责制来支撑您业务的增长。<a class="teal-link"
+                                    href="/services/hyperledger">了解更多</a></div>
                         </div>
                     </div>
 
                     <div class="col-md-6">
                         <div class="tile">
-                            <h3>石墨烯和比特股开发</h3>
-                            <div class="text">我们的石墨烯和比特股的开发团队中的每个工程师开发经验都非常丰富，他们能够把比特股区块链无缝的集成到您的企业流程中。<a class="teal-link"
-                                    href="/services/blockchain-development/bitshares-graphene/">学到更多</a></div>
+                            <h3>石墨烯和比特股(BitShares)开发</h3>
+                            <div class="text">我们的团队由经验丰富的石墨烯和比特股研发人员组成，他们能够把比特股区块链无缝的集成到您的企业流程中。<a class="teal-link"
+                                    href="/services/graphene-bitshares">了解更多</a></div>
                         </div>
                     </div>
 
                     <div class="col-md-6">
                         <div class="tile">
                             <h3>智能合约</h3>
-                            <div class="text">OpenLedger的专家团队致力于使用Hyperledger，EOS和以太坊的智能合约为现有行业问题提供解决方案和技术支持。<a class="teal-link"
-                                    href="/services/blockchain-development/smart-contracts/">学到更多</a></div>
+                            <div class="text">OpenLedger的专家团队专注于使用超级账本(Hyperledger)，EOS和以太坊的智能合约的解决方案来解决现有行业问题。<a
+                                    class="teal-link" href="/services/smart-contract">了解更多</a>
+                            </div>
                         </div>
                     </div>
 
                     <div class="col-md-6">
                         <div class="tile">
                             <h3>EOSIO</h3>
-                            <div class="text">EOSIO在网络速度这一方面尤为出色，您可以在高度可拓展的环境中构建和运行去中心化的应用程序。<a class="teal-link"
-                                    href="/services/blockchain-development/eosio-development/">学到更多</a></div>
+                            <div class="text">EOSIO是一个具有出色运行速度的底层区块链平台，您可以在高度可拓展的环境中构建和运行去中心化的应用程序。<a class="teal-link"
+                                    href="/services/eosio">了解更多</a></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-        <!-- <div class="education-for-enterprises">
-            <div class="container services-single-block">
-                <div class="gor-100">
-                    <hr class="services-single-line02">
-                    <div class="row">
-                        <div class="col-lg-5">
-                            <h3 class="black-desc">Blockchain education for enterprises</h3>
-                        </div>
-                        <div class="col-lg-7">
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <p>Dive into blockchain for business with OpenLedger. Educate your team to lead
-                                        digital transformations and derive maximal benefit from corporate blockchain
-                                        applications.</p>
-                                </div>
-                                <div class="col-lg-6">
-                                    <a href="/services/blockchain-workshops/" class="link">Learn More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <hr class="services-single-line02">
-                </div>
-            </div>
-        </div> -->
-
     </div>
     <!-- Content End -->
 
